# fadno

./: .gitignore  LICENSE  fadno.cabal  stack.yaml
.github/workflows/: applications.yml
scripts/: qt7play.applescript
src/Fadno/: Meter.hs  Midi.hs  Notation.hs  Note.hs  Util.hs  Xml.hs
tests/: MeterSpec.hs  NotationSpec.hs  NoteSpec.hs  Tests.hs  UtilSpec.hs  XmlSpec.hs
