name:                fadno
category:            Music
synopsis:            Minimal library for music generation and notation
version:             1.0.0
homepage:            http://github.com/slpopejoy/fadno
license:             BSD3
license-file:        LICENSE
author:              Stuart Popejoy
maintainer:          spopejoy@panix.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                  Fadno.Meter
                  Fadno.Midi
                  Fadno.Notation
                  Fadno.Note
                  Fadno.Util
                  Fadno.Xml


  -- other-modules:
  -- other-extensions:
  build-depends:       Decimal
                     , HUnit
                     , base >=4.8 && <4.10
                     , containers
                     , data-default
                     , deepseq
                     , event-list
                     , fadno-braids == 0.0.5
                     , fadno-xml == 1.0.3
                     , lens >= 4.13.2.1 && < 4.15
                     , midi
                     , mtl
                     , process
                     , safe >= 0.3 && < 0.4
                     , split
                     , text
                     , unordered-containers
                     , vector >= 0.11.0.0
                     , xml
                     , comonad
  hs-source-dirs: src
  default-language:    Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests
  default-language:    Haskell2010
  build-depends:
                base
              , containers
              , HUnit
              , fadno
              , lens
              , hspec
              , hspec-contrib
